fixed duplicate prediction results , fixed spacing on dt layer list of pins, fixed search item flickering on mobile search

--- a/src/app/maps/[id]/desktop/LayerPanel/PinItem.module.css
+++ b/src/app/maps/[id]/desktop/LayerPanel/PinItem.module.css
@@ -23,3 +23,7 @@
 .pinItem:hover, .pinItem.isHovering {
   border-color:var(--screen-text);
 }
+.pinFavorited {
+  left: -6px;
+  width: calc(100% + 8px)
+}
